--- a/M2/04-Ajax/homework/index.html
+++ b/M2/04-Ajax/homework/index.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -7,14 +8,17 @@
 
   <title>HomeWork Ajax</title>
 </head>
+
 <body>
   <button id='boton'>Ver Amigos</button>
+
   <ul id='lista'>
   </ul>
 
-  <h2>Ver Amigos</h2>
+  <h2 id="verAmigos">Ver Amigos</h2>
   <img src='https://upload.wikimedia.org/wikipedia/commons/c/c7/Loading_2.gif' />
   <hr>
+  <h2>Buscar amigo por id</h2>
   <input id='input'></input>
   <button id='search'>Buscar</button>
   <span id='amigo'></span>
@@ -25,4 +29,5 @@
   <span id='success'></span>
   <script src="index.js"></script>
 </body>
+
 </html>
